# scryptopy

./: README.md  pyproject.toml  requirements.txt  scrypto.py  setup.cfg  test.py
.github/workflows/: ci.yml  codeql-analysis.yml
scryptopy/: __init__.py  scrypto.py
