[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["scryptopy"]
omit = ["test.py", "*__init__.py"]

[tool.coverage.report]
omit = ["test.py", "*__init__.py"]
exclude_lines = ["if __name__ == '__main__'", "def main", "def (.+)_wrapper", 'def confirm_action']
