[metadata]
name = scryptopy
version = 0.12.0
description = a Python library for salty encryption and decryption of files and directories
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/kdrobnyh/scryptopy
author = Klim Drobnyh
author_email = klim.drobnyh@gmail.com
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security :: Cryptography
project_urls =
    Source = https://github.com/kdrobnyh/scryptopy
    Tracker = https://github.com/kdrobnyh/scryptopy/issues

[options]
zip_safe = False
platforms = any
include_package_data = True
packages = scryptopy
install_requires =
    python-gnupg>=0.4.6
    jsonschema>=3.2.0
    click>=8.0.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    scryptopy = scryptopy:main
